# inj-hash-contract

./: Cargo.toml  NOTICE
artifacts/: checksums.txt  checksums_intermediate.txt  hashmelody.wasm
src/: contract.rs  error.rs  msg.rs  state.rs  utils.rs
src/execute/: initialize_token_metadata.rs  initialize_token_oracle.rs  mint_token.rs  mod.rs  purchase_token.rs  receive_cw20.rs  setup_vault_account.rs  update_oracle.rs  update_platform.rs
src/query/: get_platform_config.rs  get_token_metadata.rs  get_token_price.rs  get_vault_balance.rs  mod.rs
